log
Sat 18 May 2024 02:47:56 AM UTC: 
 tests:  0|5
total_score: 0/70
eb314fb
Sat 18 May 2024 02:57:02 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:25: error: implicit declaration of function ‘free_node’ [-Werror=implicit-function-declaration]
   62 |                         free_node(copy_node);
      |                         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a1bfb6
Sat 18 May 2024 02:58:31 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e6c36f4
Sat 18 May 2024 02:59:13 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
8040d39
Sat 18 May 2024 03:11:28 AM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:87:13: error: ‘n’ undeclared (first use in this function)
   87 |     push(s, n);
      |             ^
sudoku.c:87:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:102:18: error: void value not ignored as it ought to be
  102 |             temp = popFront(adj_nodes);
      |                  ^
Compilation failed
38bf0c2
Sat 18 May 2024 03:12:02 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:102:18: error: void value not ignored as it ought to be
  102 |             temp = popFront(adj_nodes);
      |                  ^
Compilation failed
b87596c
Sat 18 May 2024 03:16:43 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:102:26: error: void value not ignored as it ought to be
  102 |             Node* temp = popFront(adj_nodes);
      |                          ^~~~~~~~
sudoku.c:100:15: error: unused variable ‘temp’ [-Werror=unused-variable]
  100 |         Node* temp;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
bb97893
Sat 18 May 2024 03:25:25 AM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:17: error: unused variable ‘box_idx’ [-Werror=unused-variable]
   57 |             int box_idx = (i / 3) * 3 + j / 3;
      |                 ^~~~~~~
sudoku.c: In function ‘DFS’:
sudoku.c:128:26: error: void value not ignored as it ought to be
  128 |             Node* temp = popFront(adj_nodes);
      |                          ^~~~~~~~
sudoku.c:126:15: error: unused variable ‘temp’ [-Werror=unused-variable]
  126 |         Node* temp;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e711a2
